# Cuddle-Market-BE

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose-dev.yml  docker-compose.yml  pyproject.toml  requirements.in  test.sh
.github/ISSUE_TEMPLATE/: 4조의-이슈-템플릿.md  우리만의-issue-템플릿.md
.github/workflows/: checks.yml  deploy.yml
apps/: s3_utils.py
apps/categories/: models.py  serializers.py  urls.py  views.py
apps/categories/migrations/: 0001_initial.py  0002_pettype_pettypedetail.py  0003_state_city.py
apps/chats/: admin.py  apps.py  consumers.py  middleware.py  models.py  routing.py  serializers.py  urls.py  views.py
apps/chats/migrations/: 0001_initial.py  0002_alter_chatroom_id.py  0002_initial.py  0003_alter_chatmessage_id.py
apps/common/: models.py
apps/likes/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  views.py
apps/likes/migrations/: 0001_initial.py  0002_alter_productlike_product_alter_productlike_user.py  0002_initial.py  0003_initial.py
apps/posts/: models.py  serializers.py  urls.py  views.py
apps/posts/migrations/: 0001_initial.py
apps/product/: __init__.py  models.py  serializers.py  urls.py
apps/products/: admin.py  apps.py  models.py  s3_utils.py  serializers.py  tests.py  urls.py  views.py
apps/products/migrations/: 0001_initial.py  (+2 more)
apps/users/: Serializer.py  admin.py  models.py  serializers.py  urls.py  views.py
config/: asgi.py  urls.py
config/settings/: base.py  dev.py  prod.py
resources/nginx/: Dockerfile  nginx-dev.conf  nginx.conf.template
resources/scripts/: run.sh
(+8 files in other folders)
